tdf#140280 sfx2: fix crash on double-clicking a no-sign shape in read-only mode

Don't assume that all shapes provide an InteropGrabBag UNO property,
check for it.

Change-Id: I6347c54b0631c37154424babbfbd52f802af57d1